--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,8 +4,7 @@ on:
   push:
     branches:
       - main
-env:
-  SERVICE_ACCOUNT_JSON: ${{ secrets.REVIEW_SERVICE_ACCOUNT_JSON }}
+      - "2"
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -16,8 +15,8 @@ jobs:
     - name: Set up Cloud SDK
       uses: google-github-actions/setup-gcloud@master
       with:
-        project_id: ${{ secrets.GCP_PROJECT_ID }}
-        service_account_key: ${{ secrets.GCP_SERVICE_ACCOUNT_JSON }}
+        project_id: ${{ secrets.REVIEW_GCP_PROJECT_ID }}
+        service_account_key: ${{ secrets.REVIEW_SERVICE_ACCOUNT_JSON }}
         export_default_credentials: true
     - name: Use gcloud CLI
       run: |
